# cs336-homework1

./: assignment1_doc.txt  pyproject.toml
cs336_basics/: bpe_tokenizer_optimized.py  bpe_tokenizer_optimized_2.py  bpe_tokenizer_optimized_3.py  bpe_tokenizer_py.py  model.py  optimizer.py  pretokenization.py  utils.py
scripts/: generate.py  train_llm.py  train_tokenizer.py
tests/: adapters.py
